// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/CheckboxGroup CheckboxGroup 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP CheckboxGroup-ubmlt9-2 huwOBe"
    >
      <legend
        class="CheckboxGroup__Legend-ubmlt9-1 iNZbZt"
      >
        <span
          class="CheckboxGroup__LabelText-ubmlt9-0 fBMkHk"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 gpNben Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="a"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option A
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 gpNben Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="b"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option B
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 gpNben Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="c"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option C
          </p>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Components/CheckboxGroup CheckboxGroup with all props 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP CheckboxGroup-ubmlt9-2 huwOBe"
    >
      <legend
        class="CheckboxGroup__Legend-ubmlt9-1 iNZbZt"
      >
        <span
          class="CheckboxGroup__LabelText-ubmlt9-0 fBMkHk"
        >
          Setting Selection
        </span>
        <span
          class="Text-sc-15glbbx-0 lfjkof"
          color="darkGrey"
          font-size="12px"
        >
          (Required)
        </span>
      </legend>
      <p
        class="Text-sc-15glbbx-0 HelpText__HelpTextContent-sc-186o6oo-0 clUgZq"
        color="currentColor"
        font-size="medium"
      >
        Select a setting from the menu below:
      </p>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="true"
            checked=""
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 gpNben Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            required=""
            type="checkbox"
            value="a"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option A
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="true"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 gpNben Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            required=""
            type="checkbox"
            value="b"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option B
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="true"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 gpNben Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            required=""
            type="checkbox"
            value="c"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option C
          </p>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Components/CheckboxGroup Controlled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP CheckboxGroup-ubmlt9-2 huwOBe"
    >
      <legend
        class="CheckboxGroup__Legend-ubmlt9-1 iNZbZt"
      >
        <span
          class="CheckboxGroup__LabelText-ubmlt9-0 fBMkHk"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            checked=""
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 gpNben Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="a"
          />
          <div
            checked=""
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option A
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 gpNben Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="b"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option B
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 gpNben Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="c"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option C
          </p>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Components/CheckboxGroup Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP CheckboxGroup-ubmlt9-2 huwOBe"
    >
      <legend
        class="CheckboxGroup__Legend-ubmlt9-1 iNZbZt"
      >
        <span
          class="CheckboxGroup__LabelText-ubmlt9-0 fBMkHk"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cDeIIW"
          disabled=""
        >
          <input
            aria-invalid="false"
            aria-required="false"
            checked=""
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 kjKKUT Checkbox-sc-14jj5ns-2 jnRDQb"
            disabled=""
            name="settingSelection"
            type="checkbox"
            value="a"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
            disabled=""
          />
          <p
            class="Text-sc-15glbbx-0 kEBDnw"
            color="currentColor"
            disabled=""
            font-size="medium"
          >
            Option A
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cDeIIW"
          disabled=""
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 kjKKUT Checkbox-sc-14jj5ns-2 jnRDQb"
            disabled=""
            name="settingSelection"
            type="checkbox"
            value="b"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
            disabled=""
          />
          <p
            class="Text-sc-15glbbx-0 kEBDnw"
            color="currentColor"
            disabled=""
            font-size="medium"
          >
            Option B
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cDeIIW"
          disabled=""
        >
          <input
            aria-invalid="false"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 kjKKUT Checkbox-sc-14jj5ns-2 jnRDQb"
            disabled=""
            name="settingSelection"
            type="checkbox"
            value="c"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
            disabled=""
          />
          <p
            class="Text-sc-15glbbx-0 kEBDnw"
            color="currentColor"
            disabled=""
            font-size="medium"
          >
            Option C
          </p>
        </label>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Components/CheckboxGroup with error list 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP CheckboxGroup-ubmlt9-2 huwOBe"
    >
      <legend
        class="CheckboxGroup__Legend-ubmlt9-1 iNZbZt"
      >
        <span
          class="CheckboxGroup__LabelText-ubmlt9-0 fBMkHk"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            checked=""
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 hagrVd Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="a"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option A
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 hagrVd Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="b"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option B
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 hagrVd Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="c"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option C
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 Flex-sc-1whlq91-0 jHmnKr"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
          fill="currentColor"
          focusable="false"
          height="24px"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
        >
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Please select an option
          </p>
          <ul
            class="List-sc-1ueqoqt-0 gtzCT"
            color="currentColor"
          >
            <li
              class="ListItem-sc-3wr72f-0 fgjjlO"
              color="currentColor"
            >
              Error message 1
            </li>
            <li
              class="ListItem-sc-3wr72f-0 fgjjlO"
              color="currentColor"
            >
              Error message 2
            </li>
          </ul>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;

exports[`Storyshots Components/CheckboxGroup with error message 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-sc-18srg6b-0 eGTiGd"
  >
    <fieldset
      class="Fieldset-sc-4eydyi-0 eWKTpP CheckboxGroup-ubmlt9-2 huwOBe"
    >
      <legend
        class="CheckboxGroup__Legend-ubmlt9-1 iNZbZt"
      >
        <span
          class="CheckboxGroup__LabelText-ubmlt9-0 fBMkHk"
        >
          Setting Selection
        </span>
      </legend>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            checked=""
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 hagrVd Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="a"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option A
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 hagrVd Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="b"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option B
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 hQvIAg Checkbox-sc-14jj5ns-2 jnRDQb"
      >
        <label
          class="ClickInputLabel-zdnqd7-0 cdVzeO"
        >
          <input
            aria-invalid="true"
            aria-required="false"
            class="Checkbox__CheckboxInput-sc-14jj5ns-1 hagrVd Checkbox-sc-14jj5ns-2 jnRDQb"
            name="settingSelection"
            type="checkbox"
            value="c"
          />
          <div
            class="Checkbox__VisualCheckbox-sc-14jj5ns-0 jgxrMd"
            data-testid="visual-checkbox"
          />
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Option C
          </p>
        </label>
      </div>
      <div
        class="Box-xda4ls-0 Flex-sc-1whlq91-0 jHmnKr"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-sc-150w9kl-0 iGbfeP nds-icon--error"
          fill="currentColor"
          focusable="false"
          height="24px"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-19uke1q-0 dFKyki"
        >
          <p
            class="Text-sc-15glbbx-0 gSNEe"
            color="currentColor"
            font-size="medium"
          >
            Please select an option
          </p>
        </div>
      </div>
    </fieldset>
  </div>
</div>
`;
